# singers-drf-project

./: .env.example  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: app-testing.yml
api/: apps.py  serializers.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: default.conf
singers/: admin.py  models.py  validators.py
singers/migrations/: 0001_initial.py  0002_alter_singer_name.py  0002_remove_songinalbum_unique_number_and_more.py
